--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://www.paypal.com/sdk/js?client-id=AYTPBD7uzpnWByqw8AhAK5mWGb1AwE9envmYnDwm2yDfJ-J79vS8wSIEcPfAjXBTcmiaQhqD0zxWzAFz&currency=USD"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script>
+      window.onSpotifyWebPlaybackSDKReady = () => {
+        window.Spotify = Spotify;
+      }
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
