--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HHL4PHQ6JZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HHL4PHQ6JZ');
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Hover_Logo_Mockup.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://www.paypal.com/sdk/js?client-id=AYTPBD7uzpnWByqw8AhAK5mWGb1AwE9envmYnDwm2yDfJ-J79vS8wSIEcPfAjXBTcmiaQhqD0zxWzAFz&currency=USD"></script>
@@ -18,6 +27,15 @@
         window.Spotify = Spotify;
       }
     </script>
+    <style>
+      body {
+          -ms-overflow-style: none;  /* Internet Explorer 10+ */
+          scrollbar-width: none;  /* Firefox */
+      }
+      body::-webkit-scrollbar { 
+          display: none;  /* Safari and Chrome */
+      }
+    </style>
     <title>Hover Sounds</title>
   </head>
   <body>
